--- a/Growly/package.json
+++ b/Growly/package.json
@@ -15,5 +15,10 @@
     "react-native": "0.81.5",
     "react-native-safe-area-context": "~5.6.0"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@types/react": "^19.2.7",
+    "@types/react-native": "^0.72.8",
+    "typescript": "^5.9.3"
+  }
 }
