--- a/Growly/package.json
+++ b/Growly/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "expo": "~54.0.31",
+    "expo-sqlite": "^16.0.10",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
@@ -17,7 +18,7 @@
   },
   "private": true,
   "devDependencies": {
-    "@types/react": "^19.2.7",
+    "@types/react": "~19.1.10",
     "@types/react-native": "^0.72.8",
     "typescript": "^5.9.3"
   }
